--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - image: arvindr226/alpine-ssh
     steps:
       - checkout
-      - run: ssh -v $USER@$IP "./deploy.sh"
+      - run: ssh $USER@$IP "./deploy.sh"
       
 # Orchestrate our job run sequence
 workflows:
