--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
       - image: arvindr226/alpine-ssh
     steps:
       - checkout
-      - run: ssh $USER@$IP "./deploy.sh"
-      
+      - run: ssh -o StrictHostKeyChecking=no -v "$USER"@"$IP" "./deploy.sh"
+
 # Orchestrate our job run sequence
 workflows:
   version: 2
