--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,12 @@
 version: 2.1
 
 # Define the jobs we want to run for this project
-jobs:
-  pull-and-build:
-    docker:
-      - image: arvindr226/alpine-ssh
-    steps:
-      - checkout
-      - run: ssh -o StrictHostKeyChecking=no -v "$USER"@"$IP" "./deploy.sh"
+orbs:
+  node: circleci/node16.13.1
 
-# Orchestrate our job run sequence
+version: 2.1
+
 workflows:
-  version: 2
-  build-project:
+  app-tests:
     jobs:
-      - pull-and-build:
-          filters:
-            branches:
-              only:
-                - main
+      - node/test
