--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 # Define the jobs we want to run for this project
 orbs:
-  node: node16.13.1
+  node: node:16.13.1
 
 workflows:
   app-tests:
